# reedos

./: .gitignore  Cargo.toml  Makefile  README.md  kernel.ld
.cargo/: config.toml
fit/: virt.its
hook/: Cargo.toml
hook/src/: lib.rs
kernel/: Cargo.toml  README.md  build.rs  kernel.ld
kernel/docs/presentation/: slides.aux  slides.nav
kernel/src/: asm.rs  device.rs  fs.rs  hal.rs  hook.rs  lock.rs  log.rs  main.rs  process.rs  vm.rs  wasm.rs
kernel/src/device/: uart.rs  virtio.rs
kernel/src/fs/: mod.rs  structs.rs
kernel/src/hal/: _virt.rs  mod.rs  virt.rs
kernel/src/hal/asm/riscv/: _macro.s  smodestart.s  trampoline.s  trap.s
kernel/src/hal/blockio/: mod.rs  virtio.rs
kernel/src/hal/cpucontrol/: mod.rs  opensbi.rs
kernel/src/hal/discover/: mod.rs  opensbi.rs
kernel/src/hal/entry/: mod.rs
kernel/src/hal/intexc/: mod.rs  opensbi.rs
kernel/src/hal/layout/: mod.rs  riscvbaked.rs
kernel/src/hal/serial/: mod.rs  opensbi.rs
kernel/src/hal/shared/: mod.rs
kernel/src/hal/shared/opensbi/: mod.rs
kernel/src/hal/shared/riscv/: mod.rs  plic.rs
kernel/src/hal/switch/: mod.rs
kernel/src/hal/switch/riscv/: hartlocal.rs  mod.rs
kernel/src/hal/virt/: ptable.rs  virtio.rs
kernel/src/hal/vm/: mod.rs
kernel/src/hal/vm/riscv/: mod.rs  ptable.rs
kernel/src/hw/: riscv.rs
kernel/src/process/: mod.rs  syscall.rs
kernel/src/vm/: global.rs  mod.rs  palloc.rs  vmalloc.rs
reedos/: Cargo.toml
reedos/.cargo/: config.toml
reedos/src/: hook.rs  log.rs  main.rs
src/: asm.rs  device.rs  hal.rs  hw.rs  log.rs  main.rs  process.rs  trap.rs  vm.rs
(+18 files in other folders)
