[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# features starting with hal- are hardware abstraction layer backings,
# and there should be exactly one of them enabled at a time. In theory
# this should be enforced already.
[features]
default = ["virtio", "riscv", "riscv-opensbi", "riscv-linkerscript"]
virtio = []
riscv = []
# ^ generally enables riscv specific stuff. I.e some asm macros and whatnot.
riscv-opensbi = ["riscv", "riscv-linkerscript"]
# ^ TODO this is not a true dep, we just aren't doing device descovery
# yet, see opensbi _entry asm
riscv-linkerscript = ["riscv"]
# ^ TODO how to enforce that this actually matches when the
# linkerscript is being used?


[dependencies]
bitflags = "2.3.2"
hook = { path = "../hook" }
wasmi = { version = "0.30.0", default-features=false } #pointedly not std

# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"
